--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "cappy-chat",
+  "version": "1.0.0",
+  "description": "A crappy chat tool",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "http": "^0.0.1-security",
