--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "A crappy chat tool",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
